--- a/index.html
+++ b/index.html
@@ -21,4 +21,34 @@
         tele.ready(); // Uygulamanın hazır olduğunu bildirir
     </script>
 </body>
+
+</html><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <style>
+        body { background: #000; color: gold; text-align: center; font-family: sans-serif; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; margin: 0; }
+        #coin { width: 150px; height: 150px; background: linear-gradient(145deg, #ffd700, #b8860b); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 50px; cursor: pointer; box-shadow: 0 0 20px #ffd700; transition: 0.1s; user-select: none; }
+        #coin:active { transform: scale(0.9); }
+        .score { font-size: 40px; margin-top: 20px; }
+    </style>
+</head>
+<body>
+    <div id="coin">🪙</div>
+    <div class="score">PUAN: <span id="puan">0</span></div>
+
+    <script>
+        let score = 0;
+        const tg = window.Telegram.WebApp;
+        tg.expand(); // Uygulamayı tam ekran yap
+
+        document.getElementById('coin').onclick = () => {
+            score++;
+            document.getElementById('puan').innerText = score;
+            tg.HapticFeedback.impactOccurred('medium'); // Telefonda titreşim yapar
+        };
+    </script>
+</body>
 </html>
